Fix overall spacing

--- a/frontend/src/components/feed/feed.css
+++ b/frontend/src/components/feed/feed.css
@@ -29,7 +29,6 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  margin-left: 10px;
   margin-right: 10px;
   margin-bottom: 25px;
 }
